# clickproof

./: .aider.conf.yml  .windsurfrules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Makefile  README.md  action.yml  ai-catalog.json  api.py  mcp_server.py  mkdocs.yml  openapi.yaml  pyproject.toml  smithery.yaml  smoke_test.py
.claude/commands/: domain.md
.continue/: config.json
.cursor/rules/: project.mdc
.github/: copilot-instructions.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
clickproof/: __init__.py  analytics.py  api.py  bulk.py  cli.py  fact.py  mcp_server.py  report.py  retriever.py  scorer.py  store.py
docs/: api-reference.md  architecture.md  cli-reference.md  contributing.md  github-action.md  index.md  mcp.md  openai.md  quickstart.md
docs/case-studies/: rpa-computer-use-acceleration.md  web-agent-css-selector-memory.md
examples/: computer_use_agent.py  demo.py  multi_agent_shared_memory.py  web_scraper_validation.py
guiproof/: __init__.py  api.py  cli.py  fact.py  mcp_server.py  report.py  retriever.py  scorer.py  store.py
src/: clickproof
src/clickproof/: __init__.py  api.py  fact.py  mcp_server.py  report.py  retriever.py  scorer.py  store.py
src/guiproof/: __init__.py  api.py  mcp_server.py
submissions/02_aaif_registry/: server.json
tests/: conftest.py  test_analytics.py  test_api.py  test_bulk.py  test_cli_export_decay.py  test_cli_runner.py  test_fact.py  test_mcp_functions.py  test_report.py  test_retriever.py  test_scorer.py  test_store.py
tools/: openai-tools.json
