[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guiproof"
version = "0.1.0"
description = "Persistent GUI behavioral facts for computer-use agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Sandeep Alluru", email = "onepuncchh@gmail.com" }]
keywords = [
    "llm", "agents", "ai", "computer-use", "gui",
    "behavioral-facts", "agent-memory", "mcp", "llmops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "fastapi>=0.110",
    "httpx>=0.27",
]
mcp = ["mcp>=1.0"]
api = ["fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]

[project.scripts]
guiproof = "guiproof.cli:main"
guiproof-mcp = "mcp_server:run_server"

[project.urls]
Homepage      = "https://github.com/sandeep-alluru/guiproof"
Repository    = "https://github.com/sandeep-alluru/guiproof"
Documentation = "https://sandeep-alluru.github.io/guiproof"
Changelog     = "https://github.com/sandeep-alluru/guiproof/blob/main/CHANGELOG.md"
Issues        = "https://github.com/sandeep-alluru/guiproof/issues"

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"examples/**" = ["S101", "T201"]

[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true
warn_return_any        = true
warn_unused_ignores    = true
disallow_untyped_defs  = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=guiproof --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source   = ["guiproof"]
branch   = true

[tool.coverage.report]
fail_under   = 85
show_missing = true
